--- a/templates/mongorc.js.erb
+++ b/templates/mongorc.js.erb
@@ -12,6 +12,9 @@ function authRequired() {
 
 if (authRequired()) {
   try {
+<% if @replset -%>
+    rs.slaveOk()
+<% end -%>
     var prev_db = db
     db = db.getSiblingDB('admin')
     db.auth('<%= @admin_username %>', '<%= @admin_password %>')
