Trim off the indentation from ERB syntax

--- a/templates/mongodb.conf.2.6.erb
+++ b/templates/mongodb.conf.2.6.erb
@@ -31,12 +31,12 @@ systemLog.verbosity: 5
 #Process Management
 <% if @fork or @pidfilepath -%>
 processManagement:
-  <% if @fork -%>
+  <%- if @fork -%>
   fork: <%= @fork %>
-  <% end -%>
-  <% if @pidfilepath -%>
+  <%- end -%>
+  <%- if @pidfilepath -%>
   pidFilePath: <%= @pidfilepath %>
-  <% end -%>
+  <%- end -%>
 <% end -%>
 
 #Storage
